# pygdis

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  environment.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  tests.yml
docs/: API.md  APPLICATIONS.md  GITHUB_SETUP.md  INSTALLATION.md  MATHEMATICS.md  USAGE.md
examples/: benchmark_example.py  csv_data_example.py  custom_system_example.py  lorenz_example.py  synthetic_parameter_sweep.csv
examples/data/: README.md
examples/publication/: historical_logistic_proof_of_concept.py  reproduce_benchmarks_and_sensitivity.py  reproduce_publication_figures.py
scripts/: reproduce_paper.py
src/gdis/: __init__.py  cli.py  components.py  datasets.py  plotting.py  potential.py  result.py  scaling.py  score.py  sensitivity.py  transition.py  validation.py
src/gdis/benchmarks/: __init__.py
src/gdis/systems/: __init__.py  base.py  chen.py  logistic.py  lorenz.py  rossler.py
tests/: test_boundedness.py  test_components.py  test_potential_properties.py  test_score.py  test_sensitivity.py  test_systems.py  test_validation.py
