[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygdis"
version = "1.0.0"
description = "Reference Python implementation of the Generalized Dynamical Instability Score for nonlinear dynamical systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Hamid D. Ismail"},
  {name = "Ahmad Harb"},
  {name = "Marwan Bikdash"}
]
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.3", "build>=1.2", "twine>=5.0"]

[project.scripts]
gdis = "gdis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/hamiddi/pygdis"
Repository = "https://github.com/hamiddi/pygdis"
Issues = "https://github.com/hamiddi/pygdis/issues"
Documentation = "https://github.com/hamiddi/pygdis/tree/main/docs"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
